# git-std

./: .editorconfig  .git-std.toml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  bootstrap  dprint.json  install.sh  justfile  project.toml  runw
.agents/skills/std-bump/: SKILL.md
.agents/skills/std-commit/: SKILL.md
.claude/skills/: std-bump  std-commit
.githooks/: commit-msg  commit-msg.hooks  post-commit.hooks  post-commit.off  post-merge.hooks  post-merge.off  pre-commit  pre-commit.hooks  pre-push.hooks  prepare-commit-msg.hooks  prepare-commit-msg.off
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/git-std/: Cargo.toml  README.md  build.rs
crates/git-std/src/: app.rs  bump.rs  changelog.rs  check.rs  commit.rs  config.rs  git.rs  main.rs  ui.rs
crates/git-std/src/cli/: bootstrap.rs  bump.rs  changelog.rs  check.rs  commit.rs  completions.rs  config.rs  context.rs  doctor.rs  hooks.rs  init.rs  lint.rs  mod.rs  update_check.rs  version.rs
crates/git-std/src/cli/bump/: apply.rs  detect.rs  lifecycle.rs  lock_sync.rs  mod.rs  monorepo.rs  plan.rs  stable.rs
crates/git-std/src/cli/commit/: assemble.rs  mod.rs  prompt.rs
crates/git-std/src/cli/hook/: enable.rs  install.rs  list.rs  mod.rs  run.rs  stash.rs
crates/git-std/src/cli/hooks/: enable.rs  install.rs  list.rs  mod.rs  run.rs  stash.rs
crates/git-std/src/cli/init/: bootstrap.rs  mod.rs  scaffold.rs
crates/git-std/src/commit/: mod.rs  parser.rs
crates/git-std/src/config/: deps.rs  load.rs  mod.rs  tests.rs  workspace.rs
crates/git-std/src/ecosystem/: cmd.rs  deno.rs  flutter.rs  gradle.rs  mod.rs  node.rs  plain.rs  project.rs  python.rs  rust.rs
crates/git-std/src/git/: cmd.rs  mod.rs  mutate.rs  query.rs  tag.rs
crates/git-std/tests/: bootstrap.rs  bump.rs  bump_custom.rs  bump_stable.rs  changelog.rs  check.rs  check_range.rs  check_strict.rs  cli.rs  commit.rs  completions.rs  config.rs  config_errors.rs  context.rs  doctor.rs  hooks.rs  hooks_install.rs  init.rs  lint.rs  lint_range.rs  lint_strict.rs  monorepo.rs  parser.rs  update_check.rs  version.rs
crates/standard-changelog/: Cargo.toml  README.md
crates/standard-changelog/src/: build.rs  date.rs  host.rs  lib.rs  link.rs  model.rs  render.rs
crates/standard-commit/: Cargo.toml  README.md
crates/standard-commit/src/: format.rs  lib.rs  lint.rs  parse.rs  process.rs
crates/standard-commit/tests/: parse.rs
crates/standard-githooks/: Cargo.toml  README.md
crates/standard-githooks/src/: glob.rs  lib.rs  parse.rs  run.rs  shim.rs
crates/standard-version/: Cargo.toml  README.md
crates/standard-version/src/: bump.rs  calver.rs  cargo.rs  gradle.rs  json.rs  lib.rs  project.rs  pubspec.rs  pyproject.rs  regex_engine.rs  scan.rs  toml_helpers.rs  version_file.rs  version_plain.rs
crates/standard-version/src/calver/: bump.rs  mod.rs  parse.rs
crates/standard-version/tests/: version_cargo.rs  version_files.rs  version_json.rs  version_misc.rs  version_toml.rs  version_yaml.rs
docs/: CONFIG.md  README.md  REFERENCE.md  SPEC.md  SUMMARY.md  USAGE.md  getting-started.md  recipes.md  skills.md
docs/design/: 2026-05-01-remove-skill-scaffolding.md
docs/plans/: 2026-05-01-remove-skill-scaffolding.md
docs/schema/v1/: git-std.toml.json
schemas/v1/: git-std.schema.json
skills/: std-commit.md
skills/std-bump/: SKILL.md
spec/: Cargo.toml
spec/install/: install_test.sh
spec/snapshots/bump/: breaking_change_major.stderr.expected  calver_scheme.stderr.expected  dry_run_custom_version_file.stderr.expected  dry_run_shows_plan.stderr.expected  multi_ecosystem.stderr.expected  no_bump_worthy_commits.stderr.expected  patch_scheme_dry_run.stderr.expected  prerelease_cycle_first.stderr.expected  prerelease_cycle_second.stderr.expected  release_as_forced_version.stderr.expected  skip_changelog_dry_run.stderr.expected  stable_dry_run.stderr.expected
spec/snapshots/changelog/: no_unreleased_changes.stderr.expected  range_between_tags.stdout.expected  stdout_prints_to_stdout.stdout.expected
spec/snapshots/check/: json_invalid_message.stdout.expected  range_mixed_valid_invalid.stderr.expected  strict_json_rejects_unknown_type.stdout.expected  strict_rejects_missing_scope.stderr.expected  strict_rejects_unknown_scope.stderr.expected  strict_rejects_unknown_type.stderr.expected
spec/snapshots/hooks/: init_creates_shims.stderr.expected  install_creates_shims.stderr.expected  list_fail_fast_mode.stderr.expected  list_fail_fast_mode.stdout.expected  list_no_hooks.stderr.expected  list_shows_configured_hooks.stderr.expected  list_shows_configured_hooks.stdout.expected  run_glob_filtering.stderr.expected  run_pass_fail_advisory.stderr.expected  run_skip_via_env_var.stderr.expected
spec/src/: lib.rs
spec/support/: mod.rs
spec/tests/: bump.rs  changelog.rs  check.rs  commit.rs  config.rs  doctor.rs  general.rs  hooks.rs  usage_sync.rs  version.rs
spec/tests/cmd/check/: format_json.toml  invalid_message.stderr  invalid_message.toml  valid_message.toml
spec/tests/cmd/commit/: body_dry_run.toml  combined_flags_dry_run.stderr  combined_flags_dry_run.stdout  combined_flags_dry_run.toml  dry_run.stderr  dry_run.stdout  dry_run.toml  type_scope_message.stderr  type_scope_message.stdout  type_scope_message.toml
spec/tests/cmd/config/: get_scheme.toml  get_tag_prefix.toml  get_unknown_key.stderr  get_unknown_key.toml  list_defaults.stderr  list_with_file.stderr  list_with_file.toml
spec/tests/cmd/config/list_with_file.in/: .git-std.toml
spec/tests/cmd/doctor/: help.stdout  help.toml
spec/tests/cmd/general/: completions_help.toml  help.stdout  help.toml  unknown_command.stderr  unknown_command.toml  version.stdout  version.toml
spec/tests/cmd/lint/: format_json.stdout  format_json.toml  invalid_message.toml  valid_message.toml
src/: main.rs
