[workspace]
members = [
    "crates/standard-commit",
    "crates/standard-version",
    "crates/standard-githooks",
    "crates/standard-changelog",
    "crates/git-std",
    "spec",
]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/driftsys/git-std"

[workspace.dependencies]
standard-commit = { version = "0.6.0", path = "crates/standard-commit" }
standard-changelog = { version = "0.6.0", path = "crates/standard-changelog" }
standard-version = { version = "0.6.0", path = "crates/standard-version" }
standard-githooks = { version = "0.6.0", path = "crates/standard-githooks" }

[profile.release]
lto = true
strip = true
codegen-units = 1
