[package]
name = "git-std"
version = "0.2.0"
edition = "2024"
description = "Standard git workflow — commits, versioning, hooks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/driftsys/git-std"
keywords = ["git", "conventional-commits", "hooks", "versioning", "changelog"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-std"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
inquire = "0.9"
git2 = { version = "0.20", default-features = false }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
standard-changelog = { version = "0.2.0", path = "../standard-changelog" }
standard-commit = { version = "0.2.0", path = "../standard-commit" }
standard-githooks = { version = "0.2.0", path = "../standard-githooks" }
standard-version = { version = "0.2.0", path = "../standard-version" }
toml = "0.8"
yansi = "1"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
serde_json = "1"
tempfile = "3"
