[package]
name = "git-std"
version = "0.4.0"
edition = "2024"
description = "Standard git workflow — commits, versioning, hooks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/driftsys/git-std"
documentation = "https://driftsys.github.io/git-std/"
homepage = "https://github.com/driftsys/git-std"
keywords = ["git", "conventional-commits", "hooks", "versioning", "changelog"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-std"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4"
inquire = "0.9"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
standard-changelog = { version = "0.4.0", path = "../standard-changelog" }
standard-commit = { version = "0.4.0", path = "../standard-commit" }
standard-githooks = { version = "0.4.0", path = "../standard-githooks" }
standard-version = { version = "0.4.0", path = "../standard-version" }
toml = "1.0"
yansi = "1"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
serde_json = "1"
tempfile = "3"
