[package]
name = "git-std"
version.workspace = true
edition.workspace = true
description = "Standard git workflow — commits, versioning, hooks"
license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://driftsys.github.io/git-std/"
homepage = "https://github.com/driftsys/git-std"
keywords = ["git", "conventional-commits", "hooks", "versioning", "changelog"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-std"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4"
glob = "0.3.3"
inquire = "0.9"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
standard-changelog.workspace = true
standard-commit.workspace = true
standard-githooks.workspace = true
standard-version.workspace = true
toml = "1.1"
yansi = "1"

[build-dependencies]
clap_mangen = "0.2"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
serde_json = "1"
tempfile = "3"
