[package]
name = "standard-changelog"
version = "0.1.0"
edition = "2024"
description = "Changelog generation from conventional commits"
license = "MIT"
repository = "https://github.com/driftsys/git-std"
keywords = ["changelog", "conventional-commits", "release", "git"]
categories = ["development-tools"]

[dependencies]
standard-commit = { version = "0.1.0", path = "../standard-commit" }
