[package]
name = "standard-changelog"
version = "0.2.0"
edition = "2024"
description = "Changelog generation from conventional commits"
license = "MIT"
readme = "README.md"
repository = "https://github.com/driftsys/git-std"
documentation = "https://docs.rs/standard-changelog"
keywords = ["changelog", "conventional-commits", "release", "git"]
categories = ["development-tools"]

[dependencies]
standard-commit = { version = "0.2.0", path = "../standard-commit" }
