[package]
name = "standard-changelog"
version.workspace = true
edition.workspace = true
description = "Changelog generation from conventional commits"
license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/standard-changelog"
keywords = ["changelog", "conventional-commits", "release", "git"]
categories = ["development-tools"]

[dependencies]
standard-commit.workspace = true
