[package]
name = "standard-commit"
version = "0.4.0"
edition = "2024"
description = "Conventional commit parsing, validation, and formatting"
license = "MIT"
readme = "README.md"
repository = "https://github.com/driftsys/git-std"
documentation = "https://docs.rs/standard-commit"
keywords = ["conventional-commits", "commit", "lint", "git", "validation"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
git-conventional = "1.0.0"
thiserror = "2"
