[package]
name = "standard-commit"
version.workspace = true
edition.workspace = true
description = "Conventional commit parsing, validation, and formatting"
license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/standard-commit"
keywords = ["conventional-commits", "commit", "lint", "git", "validation"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
git-conventional = "1.1.0"
thiserror = "2"
