[package]
name = "standard-githooks"
version = "0.1.0"
edition = "2024"
description = "Git hooks file format parsing, shim generation, and execution model"
license = "MIT"
readme = "README.md"
repository = "https://github.com/driftsys/git-std"
keywords = ["git", "hooks", "pre-commit", "commit-msg"]
categories = ["development-tools"]

[dependencies]
