[package]
name = "standard-githooks"
version.workspace = true
edition.workspace = true
description = "Git hooks file format parsing, shim generation, and execution model"
license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/standard-githooks"
keywords = ["git", "hooks", "pre-commit", "commit-msg"]
categories = ["development-tools"]

[dependencies]
globset = "0.4"
