[package]
name = "standard-version"
version = "0.5.1"
edition = "2024"
description = "Semantic and calendar version bump calculation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/driftsys/git-std"
documentation = "https://docs.rs/standard-version"
keywords = ["semver", "calver", "version", "bump", "git"]
categories = ["development-tools"]

[dependencies]
regex = "1"
semver = "1"
serde_json = "1"
standard-commit = { version = "0.5.0", path = "../standard-commit" }
thiserror = "2"
toml = "1.1"

[dev-dependencies]
tempfile = "3"
