[package]
name = "standard-version"
version.workspace = true
edition.workspace = true
description = "Semantic and calendar version bump calculation"
license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/standard-version"
keywords = ["semver", "calver", "version", "bump", "git"]
categories = ["development-tools"]

[dependencies]
regex = "1"
semver = "1"
serde_json = "1"
standard-commit.workspace = true
thiserror = "2"
toml = "1.1"

[dev-dependencies]
tempfile = "3"
